# geodata-scraper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_gadm.py
.claude/agents/: data-qa-agent.md  deploy-agent.md  etl-agent.md
.github/workflows/: ci-cd.yml
api/config/: settings.py  urls.py
api/geodata/: __init__.py  admin.py  apps.py  models.py  regions.py  settings.py  signals.py  urls.py  views.py  wagtail_hooks.py
api/geodata/api/: serializers.py  urls.py  views.py
api/geodata/ingest/: loader.py  transform.py
api/geodata/management/commands/: build_gha_admin.py  create_baseline.py  export_parquet.py  list_sources.py  run_etl.py  scrape.py  scrape_hydrosheds.py
api/geodata/migrations/: 0001_initial.py
api/geodata/scrapers/: api.py  ftp.py  gadm.py  http.py  hydrosheds.py  registry.py
api/geodata/templates/geodata/: mapviewer.html
api/ibf/: admin.py  apps.py  models.py  urls.py  views.py
api/ibf/api/: serializers.py  urls.py  views.py
api/ibf/management/commands/: ibf_load_impact.py
api/ibf/migrations/: 0001_initial.py
api/ibf/templates/ibf/: alert_detail.html  dashboard.html  dashboard_standalone.html
config/: settings.py  urls.py
docker/: nginx.conf  prometheus.yml
docker/grafana/dashboards/: etl.json
etl/: __init__.py  __main__.py  cli.py  orchestrator.py  pyproject.toml
etl/core/: __init__.py  config.py  load.py  metrics.py  utils.py
etl/pipelines/buildings/: extract.py
etl/pipelines/dem/: extract.py
etl/pipelines/gadm/: extract.py  gha_boundary.py
etl/pipelines/gridded/: __init__.py  cog.py  common.py  extract_manifest.py  manifest.py  process_cogs.py  process_zarr.py  validate.py  validate_inputs.py  validate_output.py  zarr.py
etl/pipelines/hydrosheds/: extract_basins.py  extract_rivers.py
etl/pipelines/ibf/: config.py  export.py  extract_glofas.py  impact_static.py  process_glofas.py  trigger.py
etl/pipelines/jrc/: extract_flood.py  extract_water.py  process_flood.py
etl/pipelines/osm/: extract_roads.py  extract_water.py
etl/pipelines/population/: extract.py
geodata_scraper/: __init__.py  admin.py  apps.py  models.py  regions.py  settings.py  urls.py  wagtail_hooks.py
geodata_scraper/api/: serializers.py  urls.py  views.py
geodata_scraper/fixtures/: sources.json
geodata_scraper/ingest/: __init__.py  loader.py  transform.py
geodata_scraper/management/commands/: create_baseline.py  export_parquet.py  list_sources.py  scrape.py  scrape_hydrosheds.py
geodata_scraper/migrations/: 0001_initial.py
geodata_scraper/scrapers/: __init__.py  api.py  base.py  ftp.py  gadm.py  http.py  hydrosheds.py  registry.py
notebooks/: 001_inspect_admin_boundaries.ipynb  002_etl_gha_data_suite.ipynb  explore_boundaries.ipynb
scripts/: convert_admin_boundaries.py
