[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geodata-scraper"
version = "0.1.0"
description = "GIS ELT pipeline — Extract geodata from any source, Load into PostGIS, Transform in-DB"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Hillary Koros", email = "hkoros@icpac.net" },
]
keywords = ["gis", "elt", "postgis", "gadm", "geodata", "scraper", "boundaries"]
classifiers = [
    "Framework :: Django",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "djangorestframework-gis>=1.0",
    "psycopg2-binary>=2.9",
    "httpx>=0.27",
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
    "wagtail>=6.0",
    "wagtail-modeladmin>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-django", "ruff"]
s3 = ["boto3"]
gcs = ["google-cloud-storage"]

[project.urls]
Repository = "https://github.com/icpac-igad/geodata-scraper"
